--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for(flat) do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.submit %>
 <% end %>
