--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,5 +1,14 @@
 <p><%= @flat.name %></p>
 <p><%= @flat.description %></p>
+
+<% if @flat.photos.attached? %>
+
+  <% @flat.photos.each do |photo| %>
+    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+  <% end %>
+
+<% end %>
+
 <p><%= link_to "Edit", edit_flat_path(@flat) %></p>
 <p>
   <%= link_to "Delete",
