added address to flat model

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,7 +2,9 @@
 <ul>
   <% @flats.each do |flat| %>
     <li>
-      <%= cl_image_tag flat.photos.first.key, height: 300, width: 400, crop: :fill %>
+      <% if flat.photos.attached? %>
+        <%= cl_image_tag flat.photos.first.key, height: 300, width: 400, crop: :fill %>
+      <% end %>
       <%= link_to flat.name, flat_path(flat) %>
     </li>
   <% end %>
