--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -10,15 +10,21 @@
 
 <% end %>
 
-<p><%= link_to "Edit", edit_flat_path(@flat) %></p>
-<p>
-  <%= link_to "Delete",
-    flat_path(@flat),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-  %>
+
+<% if @flat.user.id == current_user.id %>
+  <p>This is my flat</p>
+  <p><%= link_to "Edit", edit_flat_path(@flat) %></p>
+  <p>
+    <%= link_to "Delete",
+      flat_path(@flat),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
 </p>
+<% else %>
+  <h2>Make a booking</h2>
+  <%= render "bookings/form" %>
+<% end %>
+
+
+
 <p><%= link_to "All flats", flats_path %></p>
-
-<h2>Make a booking</h2>
-
-<%= render "bookings/form" %>
