--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -21,10 +21,6 @@
     %>
 </p>
 <% else %>
-  <h2>Make a booking</h2>
+  <h3 class='mt-5'>Make a booking</h3>
   <%= render "bookings/form" %>
 <% end %>
-
-
-
-<p><%= link_to "All flats", flats_path %></p>
