implement search and upload airbnb logo

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,4 +1,14 @@
 <p>All Flats</p>
+<div class="col-sm-8 my-3">
+  <%= form_with url: flats_path, method: :get, class: "d-flex" do %>
+    <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Type a keyword"
+      %>
+    <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+  <% end %>
+</div>
 <ul>
   <% @flats.each do |flat| %>
     <li>
