frontend home page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,9 @@
 // Define variables for your color scheme
+$primary-colour: #FF5A60;
+$secondary-colour: #ffffff;
+$grey-1: #404040;
+$grey-2: #838383;
+$grey-3: #c9c9c9;
 
 // For example:
 $red: #FD1015;
