--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,21 +1,32 @@
-<p>All Flats</p>
-<div class="col-sm-8 my-3">
-  <%= form_with url: flats_path, method: :get, class: "d-flex" do %>
-    <%= text_field_tag :query,
-          params[:query],
-          class: "form-control",
-          placeholder: "Type a keyword"
-      %>
+
+<div class="search-bar">
+<div>
+  <h1>All Flats</h1>
+    <%= form_with url: flats_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Type a keyword"
+        %>
     <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
   <% end %>
+  </div>
 </div>
-<ul>
-  <% @flats.each do |flat| %>
-    <li>
-      <% if flat.photos.attached? %>
-        <%= cl_image_tag flat.photos.first.key, height: 300, width: 400, crop: :fill %>
-      <% end %>
-      <%= link_to flat.name, flat_path(flat) %>
-    </li>
-  <% end %>
-</ul>
+
+
+<div class="outer-cards">
+  <div class="card-collection">
+    <% @flats.each do |flat| %>
+      <div class="card" style="width: 30rem;">
+        <% if flat.photos.attached? %>
+        <div class="card-img-top">
+          <%= cl_image_tag flat.photos.first.key, height: 300, width: 478, crop: :fill%>
+        </div>
+        <% end %>
+        <div class="card-body">
+          <h5><%= link_to flat.name, flat_path(flat)%></h5>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
