--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,5 +1,12 @@
-<p>Create a flat</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
 
-<%= render "form", flat: @flat %>
+      <h4>Create a flat</h4>
 
-<p><%= link_to "All flats", flats_path %></p>
+      <%= render "form", flat: @flat %>
+
+      <p><%= link_to "All flats", flats_path %></p>
+    </div>
+  </div>
+</div>
