--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,7 +1,7 @@
-<%= simple_form_for(flat) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :address %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit %>
+ <%= simple_form_for(flat) do |f| %>
+   <%= f.input :name %>
+   <%= f.input :description %>
+   <%= f.input :address %>
+   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+   <%= f.submit class: "btn btn-primary mb-3"%>
 <% end %>
