--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,4 @@
-<div class="show">
+<div class="show_page">
   <h2 class='my-5'><%= @flat.name %></h2>
   <p><%= @flat.description %><br>
   <%= @flat.address %></p>
