--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,13 +1,13 @@
 <div>
-  <h1>Dashboard Page!</h1>
+  <h1>Dashboard</h1>
 </div>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">All Flats</button>
+    <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true">My Bookings</button>
   </li>
   <li class="nav-item" role="presentation">
-    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">My Bookings</button>
+    <button class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="false">All Flats</button>
   </li>
   <li class="nav-item" role="presentation">
     <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Booking Requests</button>
@@ -16,26 +16,8 @@
 
 
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-    <div class="outer-cards">
-        <div class="card-collection">
-          <% @my_flats.each do |flat| %>
-            <div class="card">
-              <% if flat.photos.attached? %>
-                <div class="card-img-top">
-                  <%= cl_image_tag flat.photos.first.key, height: 300, width: 478, crop: :fill, class:"w-100" %>
-                </div>
-              <% end %>
-              <div class="card-body">
-              <h5><%= link_to flat.name, flat_path(flat) %></h5>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-  </div>
 
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+  <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
     <table class="table">
       <thead>
         <tr>
@@ -58,6 +40,25 @@
         <% end %>
       </tbody>
     </table>
+  </div>
+
+  <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <div class="outer-cards">
+        <div class="card-collection">
+          <% @my_flats.each do |flat| %>
+            <div class="card">
+              <% if flat.photos.attached? %>
+                <div class="card-img-top">
+                  <%= cl_image_tag flat.photos.first.key, height: 300, width: 478, crop: :fill, class:"w-100" %>
+                </div>
+              <% end %>
+              <div class="card-body">
+              <h5><%= link_to flat.name, flat_path(flat) %></h5>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
   </div>
 
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
